<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".XMLHome">

    <Toolbar
        android:id="@+id/toolbar_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:background="@null"
            android:contentDescription="Back to initial"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_home_black_30dp"
            app:tint="@color/colorChange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintStart_toEndOf="@id/back" />

        <ImageButton
            android:id="@+id/upcoming_events_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/back_to_list"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_checklist_rtl_white_30dp"
            app:tint="@color/colorChange"/>

        <ImageButton
            android:id="@+id/calendar_events_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/back_to_calendar"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_calendar_month_white_30dp"
            android:visibility="gone"
            app:tint="@color/colorChange" />

    </Toolbar>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar_calendar"
        >

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dateTextAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_calendar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_date_events_header"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendar_view"
            app:layout_constraintVertical_bias="0.0" />


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/day_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/week_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Add event"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_add_black_24dp"/>

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/empty_events_list_label"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/current_date_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/floating_button"
        app:layout_constraintTop_toBottomOf="@id/linear_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>